feat(telemetry): migrate InfluxDB v2 to v3 (influxdb3-java client)